Done: -[x] E-Commerce Design is completed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   url_launcher: ^6.2.3
   flutter_native_splash: ^2.3.9
   smooth_page_indicator: ^1.1.0
-  carousel_slider: ^4.2.1
+
 
   # Icons
   iconsax: ^0.0.8
@@ -30,7 +30,9 @@ dependencies:
   get_storage: ^2.1.1
 
   #Product Specific
-
+  readmore: ^2.2.0
+  carousel_slider: ^4.2.1
+  flutter_rating_bar: ^4.0.1
 
   # ------------Package End -------------#
 
@@ -53,6 +55,8 @@ flutter:
     - assets/images/animation/
     - assets/images/banner/
     - assets/images/products/
+    - assets/images/user/
+    - assets/icons/payment_method/
 
   # ----------- Local Font -----------#
   fonts:
