Done: -[x] Authentication Sign in and login Screen -[x] error in the full_screen_loader.dart check

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   url_launcher: ^6.2.3
   flutter_native_splash: ^2.3.9
   smooth_page_indicator: ^1.1.0
+  lottie: ^3.0.0
+  connectivity_plus: ^5.0.2
 
 
   # Icons
@@ -33,6 +35,11 @@ dependencies:
   readmore: ^2.2.0
   carousel_slider: ^4.2.1
   flutter_rating_bar: ^4.0.1
+
+  # Firebase
+  firebase_core: ^2.24.2
+  cloud_firestore: ^4.15.0
+  firebase_auth: ^4.17.0
 
   # ------------Package End -------------#
 
