--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,11 +15,11 @@ dependencies:
   # Utility Package
   http: ^1.1.2
   intl: ^0.19.0
-  logger: ^2.0.2+1
+  logger: ^2.0.1
   url_launcher: ^6.2.3
   flutter_native_splash: ^2.3.9
   smooth_page_indicator: ^1.1.0
-  lottie: ^3.0.0
+  lottie: ^2.6.0
   connectivity_plus: ^5.0.2
 
 
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^2.24.2
   cloud_firestore: ^4.15.0
   firebase_auth: ^4.17.0
+  google_sign_in: ^6.2.1
 
   # ------------Package End -------------#
 
