Done: -[x] code is up to date -[x] local storage is pending

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^4.15.0
   firebase_auth: ^4.17.0
   google_sign_in: ^6.2.1
+  dio: ^5.4.1
 
   # ------------Package End -------------#
 
